# onnxruntime-tutorial

./: README.md
1_hello_ort/: CMakeLists.txt  main.cpp
2_available_providers/: CMakeLists.txt  main.cpp
3_onnx_model_info/: CMakeLists.txt  main.cpp
4_linear/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
data/linear/: linear.onnx  linear.py
